--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -9,8 +9,24 @@
     <link rel="stylesheet" type="text/css" href="/css/main.min.css">
 </head>
 <body>
-    <div class="div">gdggdgdgdg</div>
-    <div class="div"></div>
+    <div class="wrapper">
+        <div class="container">
+            <header class="head">
+
+            </header>
+        </div>
+        <div class="content">
+            <aside class="sidebar">
+
+            </aside>
+            <main class="page">
+                
+            </main>
+        </div>
+        <footer class="footer">
+
+        </footer>
+    </div>
 
     <script src="/js/vendor.min.js"></script>
     <script src="/js/main.min.js"></script>
