--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="/css/vendor.min.css"> <!--outer CSS libraries like normalize.cc etc-->
-    <link rel="stylesheet" type="text/css" href="/css/main.min.css">
+    <link rel="stylesheet" type="text/css" href="css/vendor.min.css"> <!--outer CSS libraries like normalize.cc etc-->
+    <link rel="stylesheet" type="text/css" href="css/main.min.css">
 </head>
 <body>
     <div class="wrapper">
