--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -28,7 +28,7 @@
         </footer>
     </div>
 
-    <script src="/js/vendor.min.js"></script>
-    <script src="/js/main.min.js"></script>
+    <script src="js/vendor.min.js"></script>
+    <script src="js/main.min.js"></script>
 </body>
 </html>
